gloo-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-proxy
  namespace: gloo-system
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: "local-development"
    service.beta.kubernetes.io/azure-load-balancer-pip-name: "aks-cluster-ip"
spec:
  type: LoadBalancer
  selector:
    gloo: gateway-proxy
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
