echo-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - cluster-dev.internal.moesif.com
    routes:
    - matchers:
      - prefix: /
      delegateAction:
        ref:
          name: 'echo-routes'
          namespace: 'gloo-system'
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo-tls
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - cluster-dev.internal.moesif.com
    routes:
    - matchers:
      - prefix: /
      delegateAction:
        ref:
          name: 'echo-routes'
          namespace: 'gloo-system'
  sslConfig:
    secretRef:
      name: gloo-tls
      namespace: 'gloo-system'
