istio-echo-gateway-vservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: echo-gateway
  namespace: default
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo-virtual-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - echo-gateway
  http:
  - match:
    - uri:
        exact: /echo
    route:
    - destination:
        host: echo
        port:
          number: 80
